# ServiceX

./: .gitignore  .readthedocs.yml  404.html  CHANGELOG.md  DEPLOYMENT.md  README.md  index.html  logging-values.yaml  merge_repo.sh  migrate-repo.sh  migrate.sh  mkdocs.yml  pyproject.toml  river-logging-values.yaml  river-uproot-cms-values.yaml  river-uproot-values.yaml  river-xaod-values.yaml  search.html  sitemap.xml  tag_and_release.sh  uproot-pv-values.yaml  values_river_dev_with_ingress_controller.yaml
code_generator_funcadl_uproot/: .flake8  .gitignore  Dockerfile  boot.sh  pyproject.toml  requirements.txt  transformer_capabilities.json
code_generator_funcadl_uproot/scripts/: from_ast_to_zip.py
code_generator_funcadl_uproot/tests/: test_ast_translator.py  test_generate_code.py
code_generator_funcadl_uproot/uproot_code_generator/: __init__.py  ast_translator.py
code_generator_funcadl_xAOD/: .coveragerc  .gitignore  .travis.yml  Codegen_func_adl_xAOD.postman_collection.json  Dockerfile  Dockerfile.uproot  Dockerfile.xaod  README.md  README.rst  app.atlas.xaod.conf  app.cms.aod.conf  app.conf  boot.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py  tag_and_release.sh  transformer_capabilities.json
code_generator_funcadl_xAOD/scripts/: from_ast_to_zip.py
code_generator_funcadl_xAOD/servicex_code_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code_generator_funcadl_xAOD/tests/: test_ast_translator.py  test_generate_code.py
code_generator_funcadl_xAOD/xaod_code_generator/: __init__.py  ast_translator.py
code_generator_python/: .gitignore  Dockerfile  README.md  boot.sh  pyproject.toml  requirements.txt  requirements_test.txt  transformer_capabilities.json
code_generator_python/python_code_generator/: __init__.py  python_translator.py
code_generator_python/scripts/: from_text_to_zip.py
code_generator_python/tests/: __init__.py  test_python_translator.py
did_finder_cernopendata/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_test.txt  tag_and_release.sh
did_finder_cernopendata/samples/: simple_plot.ipynb
did_finder_cernopendata/scripts/: start_celery_worker.sh
did_finder_cernopendata/tests/: test_servicex_did_finder_cernopendata.py
did_finder_rucio/: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  bashrc  configure_python3.sh  proxy-exporter.sh  pyproject.toml  request_lookup.py  request_lookup_mt.py  requirements.txt  requirements_test.txt  rucio.cfg  run_x509_updater.sh  runme.sh  tag_and_release.sh
did_finder_rucio/config/: config.json  rucio.template.cfg
did_finder_rucio/did_finder/: rucio_ops.py
did_finder_rucio/direct_test/: test1.py
did_finder_rucio/kube/: did-finder.yaml  start.bat
did_finder_rucio/rucio_did_finder/: lookup_request.py  rucio_adapter.py
did_finder_rucio/sample/: xaod_query.ipynb
did_finder_rucio/scripts/: did_finder.py  start_celery_worker.sh
did_finder_unzip/: Dockerfile  pyproject.toml  runme.sh
did_finder_unzip/scripts/: did_finder.py
did_finder_xrootd/: .gitignore  Dockerfile  README.md  pyproject.toml
did_finder_xrootd/scripts/: start_celery_worker.sh
did_finder_xrootd/tests/: test_servicex_did_finder_xrootd.py
lite/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
lite/kube/: deployment.yaml  lb.yaml
lite/resources/: deployment.yaml  start.sh
lite/scripts/: sXlite.py
minio_cleanup/: Dockerfile  README.md  pyproject.toml
minio_cleanup/resources/: Dockerfile  cleanup_batch.yaml  start.sh
minio_cleanup/scripts/: minio_cleanup.py
minio_cleanup/servicex_storage/: __init__.py  object_storage_manager.py  s3_storage_manager.py
minio_cleanup/tests/: test_minio_storage_manager.py
models/: .gitignore  pyproject.toml
replica_distance_service/: Dockerfile  pyproject.toml
servicex_app/: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.rst  ServiceXTest.postman_collection.json  app.conf  app.conf.template  boot.sh  create_sample_jwt.py  create_sample_jwt_coffee_casa.py  docker-dev.conf  jwt_rsa  jwt_rsa.pub  models.py  pyproject.toml  rabbit_adaptor.py  requirements.txt  requirements_test.txt  sequence_diagram.drawio  servicex_resources.py  setup.cfg  setup.py  tag_and_release.sh  transformer_manager.py
servicex_app/doc/: sequence_diagram.drawio
servicex_app/migrations/: alembic.ini  env.py
servicex_app/servicex/: __init__.py  app.py  code_gen_adapter.py  dataset_manager.py  decorators.py  docker_repo_adapter.py  kafka_topic_manager.py  lookup_result_processor.py  mailgun_adaptor.py  models.py  object_store_manager.py  rabbit_adaptor.py  routes.py  servicex_resources.py  transformer_manager.py
servicex_app/servicex_app/: __init__.py  app.py  celery_task_router.py  code_gen_adapter.py  dataset_manager.py  decorators.py  did_parser.py  docker_repo_adapter.py  lookup_result_processor.py  models.py  (+5 more)
transformer_manager/: .gitignore  pyproject.toml
transformer_sidecar/: .flake8  .gitignore  Dockerfile  README.md  gai.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  transformer.py  validate_requests.py
uproot_transformer/: Dockerfile  Dockerfile.uprootTransformer  Dockerfile.xaodTransformer  LICENSE  README.md  arrow_iterator.py  bashrc  proxy-exporter.sh  pyproject.toml  requirements.txt  tag_and_release.sh  transformer.py  transformer_uproot.py  transformer_xaod.py  uproot_bashrc  validate_requests.py  xAOD_CPP_Transformer.py
x509_secrets/: .gitignore  Dockerfile  README.md  bashrc  pyproject.toml  scl_enable  tag_and_release.sh  x509_updater.py
xaod_cpp_transformer/: .gitignore  Dockerfile  Dockerfile.uprootTransformer  Dockerfile.xaodTransformer  DockerfileATLASxAOD  DockerfileCMSAOD  README.md  bashrc  proxy-exporter.sh  pyproject.toml  requirements.txt  transform_single_file.py  transformer-shim.py  transformer.py  transformer_uproot.py  transformer_xaod.py  validate_requests.py  xAOD_CPP_Transformer.py  xaod_proxy_exporter.sh
(+1130 files in other folders)
