[tool.poetry]
name = "servicex"
version = "0.1.0"
description = "Developmen virtual environment for ServiceX"
authors = ["Ben Galewsky <ben@peartreestudio.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
servicex-app = {path = "servicex_app", develop = true}
did-finder-cernopendata = {path = "did_finder_cernopendata", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
