[tool.poetry]
name = "servicex"
version = "0.1.0"
description = "Developmen virtual environment for ServiceX"
authors = ["Ben Galewsky <ben@peartreestudio.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
servicex-app = {path = "servicex_app", develop = true}
did-finder-cernopendata = {path = "did_finder_cernopendata", develop = true}
did-finder-xrootd = {path = "did_finder_xrootd", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
flake8 = "^7.1"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"
responses = "^0.14.0"
pytest-asyncio = "^0.23.7"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
