[tool.poetry]
name = "code-generator-funcadl-uproot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "code_generator_funcadl_uproot"}]

[tool.poetry.dependencies]
python = "~3.10"
servicex-code-gen-lib = "1.1.0a2"
func-adl = "2.3.1"
"func-adl.ast" = "2.3.1"
func-adl-uproot = "1.9.0"
qastle = "0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
