[tool.poetry]
name = "code-generator-python"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "code_generator_python"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-WTF = "^1.0.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
coverage = "^6.4.4"
codecov = "^2.1.12"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
