[tool.poetry]
name = "code-generator-python"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "code_generator_python"}]

[tool.poetry.dependencies]
python = "~3.10"
servicex-code-gen-lib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
