[tool.poetry]
name = "ServiceX_DID_finder_CERNOpenData"
version = "1.0.0a1"
description = "DID Finder that translates CERN OpenData Files"
authors = ["Gordon Watts <gwatts@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
