[tool.poetry]
name = "did-finder-cernopendata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "did_finder_cernopendata"}]

[tool.poetry.dependencies]
python = "~3.7"
servicex-did-finder-lib = "^1.1a5"
pytest = "^7.1.3"
flake8 = "^5.0.4"
jupyterlab = "^3.4.7"
qastle = "^0.15.0"
func-adl-servicex = "^2.0"
pytest-asyncio = "^0.19.0"
coverage = "^6.5.0"
codecov = "^2.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
