[tool.poetry]
name = "did-finder-rucio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "did_finder_rucio"}]

[tool.poetry.dependencies]
python = "^3.9"
rucio-clients = "^1.29.7.post1"
pika = "1.1.0"
servicex-did-finder-lib = "1.2"
xmltodict = "^0.13.0"
wheel = "^0.37.1"
pymemcache = "^4.0.0"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"
codecov = "^2.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
