[tool.poetry]
name = "did-finder-rucio"
version = "0.1.0"
description = ""
authors = ["Ilija Vukotic <ivukotic@uchicago.edu>"]
readme = "README.md"
packages = [{include = "rucio_did_finder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
rucio-clients = "^34.2.0"
xmltodict = "^0.13.0"
servicex-did-finder-lib = "^3.0.0"
requests = ">=2.25.0,<3.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
