[tool.poetry]
name = "did-finder-unzip"
version = "0.1.0"
description = ""
authors = ["Prajwal Shriram"]
readme = "README.md"
packages = [{include = "did_finder_unzip"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pymemcache = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"