[tool.poetry]
name = "did-finder-xrootd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src/servicex_did_finder_xrootd"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
servicex-did-finder-lib = ">=2.0.3"
xrootd = ">=5.6.9"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3"
flake8 = ">=5.0.4"
pytest-asyncio = ">=0.19.0"
coverage = ">=6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
