[tool.poetry]
name = "minio_cleanup"
version = "0.1.0"
description = ""
authors = ["Suchandra Thapa <suchandra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
minio = "^7.1.12"
servicex_storage = {git = "https://github.com/ssl-hep/servicex_storage_lib",  rev = "1bfb95ed6022a27dc902615ca904480cc2be6bbe"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
