[tool.poetry]
name = "minio_cleanup"
version = "0.1.0"
description = ""
authors = ["Suchandra Thapa <suchandra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
minio = "^7.1.12"
python-logstash = "^0.4.8"
urllib3 = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
