[tool.poetry]
name = "servicex-models"
version = "1.0.0"
homepage = "https://iris-hep.org"
license = "BSD"
maintainers = ["ServiceX Team <bengal1@illinois.edu>"]
authors = []
description = "Database Mdels for ServiceX"

packages = [{include = "src/servicex_models"}]

[tool.poetry.dependencies]
python = "~3.10"
sqlalchemy = "^2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "^5.0.4"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"
pytest-flask = "^1.2.0"
coverage = "^6.5.0"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["servicex"]