[tool.poetry]
name = "replica-distance-service"
version = "0.1.0"
description = "Scripts to set up "
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "servicex"}]

[tool.poetry.dependencies]
python = "~3.12"
geoip2 = "^4.7.0"
Celery= "^5.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-flask = "^1.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest = "^7.1.3"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
