[tool.poetry]
name = "servicex-app"
version = "1.0.0-RC.3"
homepage = "https://iris-hep.org"
license = "BSD"
maintainers = ["ServiceX Team <bengal1@illinois.edu>"]
authors = []
description = "REST Frontend to ServiceX"
readme = "README.rst"
packages = [{include = "servicex_app"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-WTF = "^1.0.1"
Flask-Cors = "^3.0.10"
WTForms = "^3.0.1"
email-validator = "1.1.2"
pika = "^1.3.0"
Flask-RESTful = "^0.3.9"
flask-jwt-extended = "^3.0"
passlib = "^1.7.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
kubernetes = "^24.2.0"
minio = "^7.1.12"
psycopg2-binary = "^2.9.3"
globus-sdk = "^3.12.0"
cryptography = "^38.0.1"
Bootstrap-Flask = "^2.1.0"
humanize = "^4.4.0"
MarkupSafe = "2.0.1"
python-logstash = "0.4.8"
gunicorn = "^20.1.0"
pytest = "^5.2"
pytest-flask = "^1.0.0"
coverage = "^5.2"
codecov = "2.1.8"
pytest-mock = "3.2.0"
flake8 = "^3.8"
blinker = "^1.5"
pre-commit = "^2.20.0"
Jinja2 = "2.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["servicex"]
