[tool.poetry]
name = "transformer-manager"
version = "1.0.0"
homepage = "https://iris-hep.org"
license = "BSD"
maintainers = ["ServiceX Team <bengal1@illinois.edu>"]
authors = []
description = "Celery-based service for managing transformer jobs"
readme = "README.rst"

packages = [{include = "transformer_manager", from = "."}]

[tool.poetry.dependencies]
python = "~3.10"
Celery= "^5.4"
kubernetes = "^25.3.0"
minio = "^7.1.12"
psycopg2 = "^2.9.5"
python-logstash = "^0.4.8"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "^5.0.4"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
black = "^21.12b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["servicex"]