[tool.poetry]
name = "transformer-sidecar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transformer_sidecar"}]

[tool.poetry.dependencies]
python = "~3.10"
pika = "^1.3.1"
rabbitmq = "^0.2.0"
pyarrow = "^10.0.0"
psutil = "^5.9.3"
watchdog = "^2.1.9"
retry = "^0.9.2"
minio = "^7.1.12"
python-logstash = "^0.4.8"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "^5.0.4"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
