[tool.poetry]
name = "transformer-sidecar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transformer_sidecar"}]

[tool.poetry.dependencies]
python = "~3.10"
Celery= "^5.4"
urllib3 = "^2.0.7"
psutil = "^5.9.3"
retry = "^0.9.2"
minio = "^7.1.12"
python-logstash = "^0.4.8"

uproot = "^5.3.10"
fsspec = "2023.6.0"
tenacity = "^9.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "^5.0.4"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"
coverage = "^6.5.0"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
