[tool.poetry]
name = "uproot-transformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uproot_transformer"}]

[tool.poetry.dependencies]
python = "~3.7"
awkward = "0.12.21"
minio = "5.0.10"
pika = "1.1.0"
pyarrow = "0.16.0"
servicex-transformer = "1.0.3"
vector = "^0.10.0"
psutil = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
