[tool.poetry]
name = "uproot-transformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uproot_transformer"}]

[tool.poetry.dependencies]
python = "~3.10"
uproot = "^4.3.7"
awkward = "^1.10.1"
pyarrow = "9.0.0"
vector = "^0.10.0"
minio = "^7.1.12"
pika = "1.1.0"
psutil = "^5.9.3"
python-logstash = "^0.4.8"

# servicex-transformer not installing with 3.10


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
