[tool.poetry]
name = "xaod-cpp-transformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "xaod_cpp_transformer"}]

[tool.poetry.dependencies]
python = "~3.10"
awkward = "^1.10.1"
lz4 = "^4.0.2"
minio = "7.1.12"
numpy = "1.23.3"
pika = "1.1.0"
pyarrow = "9.0.0"
requests = "^2.28.1"
xxhash = "^3.1.0"
psutil = "^5.9.3"

#servicex-transformer not installing with python 3.10

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
python-logstash = "^0.4.8"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
